--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,18 @@
-<p>
-  login works!
-</p>
+<div class="container-fluid bg-warning d-flex align-items-center justify-content-center" id="hero-technology"
+     style="min-height: 100vh;">
+  <form style="min-width: 20rem;">
+    <div class="display-3 text-light mb-5">
+      ¡Bienvenido!
+    </div>
+    <div class="form-group">
+      <label for="email" class="text-light">Correo Electrónico</label>
+      <input type="email" class="form-control" id="email" aria-describedby="Ingrese el Email"
+             placeholder="Ingrese su Correo">
+    </div>
+    <div class="form-group">
+      <label for="password" class="text-light">Contraseña</label>
+      <input type="password" class="form-control" id="password" placeholder="Ingrese su Contraseña">
+    </div>
+    <button type="submit" class="btn btn-danger text-light">Iniciar Sesión</button>
+  </form>
+</div>
