se cambia el color del navside y se cambia el color de la letra del texto del hola mundo

--- a/src/app/componentes/navside/navside.component.html
+++ b/src/app/componentes/navside/navside.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="sidePanelCerrado bounceIn" id="sidenavPanel" mode="side" [opened]='true'>
-    <h1>Hola mundo</h1>
+  <mat-drawer #drawer class="sidePanelCerrado bounceIn bg-primary" id="sidenavPanel" mode="side" [opened]='true'>
+    <h1 class="text-light">Hola mundo</h1>
   </mat-drawer>
   <mat-drawer-content class="example-sidenav-content">
     <router-outlet></router-outlet>
