--- a/src/app/componentes/navside/navside.component.scss
+++ b/src/app/componentes/navside/navside.component.scss
@@ -5,12 +5,12 @@
 }
 .sidePanelAbierto {
   /*width: 195px;*/
-  background-color: darkslategray;
+  //background-color: darkslategray;
   transition: width 0.3s !important;
 }
 .sidePanelCerrado {
   /*width: 90px;*/
-  background-color: darkslategray;
+  //background-color: darkslategray;
   transition: width 0.3s !important;
 }
 .elevated {
