--- a/src/app/componentes/navside/navside.component.html
+++ b/src/app/componentes/navside/navside.component.html
@@ -1,6 +1,40 @@
 <mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="sidePanelCerrado bounceIn bg-primary" id="sidenavPanel" mode="side" [opened]='true'>
-    <h1 class="text-light">Hola mundo</h1>
+  <mat-drawer #drawer class="sidePanelCerrado bounceIn bg-info" id="sidenavPanel" mode="side" [opened]='true'>
+    <div class="mx-auto">
+      <div class="container text-center d-block">
+        <img src="../../../assets/DefaultProfilePhotos/defaultMasculino.png" alt="Avatar" class="mx-auto avatar mt-4">
+        <div class="text-light mt-2">
+          Edycar Reyes
+        </div>
+      </div>
+    </div>
+    <mat-list class="pt-2 text-center align-middle">
+      <a matTooltip="Estadísticas" class="onHover mx-auto" mat-list-item style="text-decoration: none;">
+        <i matListIcon class="mx-auto fas fa-bar-chart text-light"></i>
+        <h3 matLine class="text-light"> Estadísticas </h3>
+      </a>
+      <a matTooltip="Inventario" class="onHover mx-auto" mat-list-item style="text-decoration: none;">
+        <i matListIcon class="mx-auto fas fa-boxes text-light"></i>
+        <h3 matLine class="text-light"> Inventario </h3>
+      </a>
+      <a matTooltip="Pedido" class="onHover mx-auto" mat-list-item style="text-decoration: none;">
+        <i matListIcon class="mx-auto fas fa-parachute-box text-light"></i>
+        <h3 matLine class="text-light"> Pedido </h3>
+      </a>
+      <a matTooltip="Clientes" class="onHover mx-auto" mat-list-item style="text-decoration: none;">
+        <i matListIcon class="mx-auto fas fa-users text-light"></i>
+        <h3 matLine class="text-light"> Clientes </h3>
+      </a>
+      <a matTooltip="Créditos" class="onHover mx-auto" mat-list-item style="text-decoration: none;">
+        <i matListIcon class="mx-auto fas fa-hand-holding-usd text-light"></i>
+        <h3 matLine class="text-light"> Créditos </h3>
+      </a>
+    </mat-list>
+    <!--<div class="container-fluid text-center position-sticky fixed-bottom" style="background-color: gray;">
+      <button mat-icon-button class="mx-auto" matTooltip="Contraer">
+        <mat-icon class="text-light mx-auto">arrow_back_ios</mat-icon>
+      </button>
+    </div>-->
   </mat-drawer>
   <mat-drawer-content class="example-sidenav-content">
     <router-outlet></router-outlet>
