se diseñan los cards de la pagina de estadisticas

--- a/src/app/pages/estadisticas/estadisticas.component.html
+++ b/src/app/pages/estadisticas/estadisticas.component.html
@@ -1,3 +1,62 @@
-<p>
-  estadisticas works!
-</p>
+<app-navbar [titulo]="'Estadísticas'"></app-navbar>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <div class="card bg-light shadow bounceIn text-dark text-center p-3 mt-3 elevated"
+           style="border: none; border-radius: 20px;">
+        <div class="card-header text-center" style="border-bottom: none !important; border-radius: 10px;">
+          <div class="card-icon elevated text-center text-secondary card bg-transparent bounceIn p-1"
+               style="border: none;">
+            <i style="font-size: 2rem;" class="fas fa-calendar-day m-3"></i>
+          </div>
+        </div>
+        <blockquote class="blockquote mb-0">
+          <p class="text-dark">Ventas del Día.</p>
+          <footer class="text-white">
+            <b class="text-dark">
+              C$80
+            </b>
+          </footer>
+        </blockquote>
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="card bg-light shadow bounceIn text-dark text-center p-3 mt-3 elevated"
+           style="border: none; border-radius: 20px;">
+        <div class="card-header text-center" style="border-bottom: none !important; border-radius: 10px;">
+          <div class="card-icon elevated text-center text-secondary card bg-transparent bounceIn p-1"
+               style="border: none;">
+            <i style="font-size: 2rem;" class="fas fa-calendar-week m-3"></i>
+          </div>
+        </div>
+        <blockquote class="blockquote mb-0">
+          <p class="text-dark">Ventas de la Semana.</p>
+          <footer class="text-white">
+            <b class="text-dark">
+              C$800
+            </b>
+          </footer>
+        </blockquote>
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="card bg-light shadow bounceIn text-dark text-center p-3 mt-3 elevated"
+           style="border: none; border-radius: 20px;">
+        <div class="card-header text-center" style="border-bottom: none !important; border-radius: 10px;">
+          <div class="card-icon elevated text-center text-secondary card bg-transparent bounceIn p-1"
+               style="border: none;">
+            <i style="font-size: 2rem;" class="fas fa-calendar m-3"></i>
+          </div>
+        </div>
+        <blockquote class="blockquote mb-0">
+          <p class="text-dark">Ventas del Año.</p>
+          <footer class="text-white">
+            <b class="text-dark">
+              C$8000
+            </b>
+          </footer>
+        </blockquote>
+      </div>
+    </div>
+  </div>
+</div>
