--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/theming";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none
+}
+
+::-webkit-scrollbar:vertical {
+  /*width: 8px*/
+  display: none;
+}
+
+::-webkit-scrollbar:horizontal {
+  height: 10px
+}
+
+/*::-webkit-scrollbar-thumb {
+	background-color: var(--black-transparent-20, rgba(0, 0, 0, 0.2));
+	-webkit-border-radius: 4px;
+	border-radius: 4px
+}*/
