--- a/src/app/pages/estadisticas/estadisticas.component.html
+++ b/src/app/pages/estadisticas/estadisticas.component.html
@@ -60,3 +60,70 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-sm-2 col-md-2 col-lg-2" style="min-width: 50%;">
+      <blockquote class="blockquote mb-0">
+        <p class="text-dark">Productos vendidos en el dia.</p>
+      </blockquote>
+      <table mat-table [dataSource]="transactions" class="shadow">
+        <!-- Producto Column -->
+        <ng-container matColumnDef="Producto">
+          <th mat-header-cell *matHeaderCellDef> Producto</th>
+          <td mat-cell *matCellDef="let transaction"> {{transaction.Producto}} </td>
+          <td mat-footer-cell *matFooterCellDef> Total</td>
+        </ng-container>
+
+        <!-- Cantidad Column -->
+        <ng-container matColumnDef="Cantidad">
+          <th mat-header-cell *matHeaderCellDef> Cantidad</th>
+          <td mat-cell *matCellDef="let transaction"> {{transaction.Cantidad}} </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
+        <!-- Valor Column -->
+        <ng-container matColumnDef="Valor">
+          <th mat-header-cell *matHeaderCellDef> Valor</th>
+          <td mat-cell *matCellDef="let transaction"> {{transaction.Valor | currency}} </td>
+          <td mat-footer-cell *matFooterCellDef> {{getTotalValor() | currency}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+      </table>
+
+    </div>
+    <div class="col-sm-2 col-md-2 col-lg-2" style="min-width: 50%;">
+      <blockquote class="blockquote mb-0">
+        <p class="text-dark">Productos vendidos en la semana.</p>
+      </blockquote>
+      <table mat-table [dataSource]="transactions" class="shadow">
+        <!-- Producto Column -->
+        <ng-container matColumnDef="Producto">
+          <th mat-header-cell *matHeaderCellDef> Producto</th>
+          <td mat-cell *matCellDef="let transaction"> {{transaction.Producto}} </td>
+          <td mat-footer-cell *matFooterCellDef> Total</td>
+        </ng-container>
+
+        <!-- Cantidad Column -->
+        <ng-container matColumnDef="Cantidad">
+          <th mat-header-cell *matHeaderCellDef> Cantidad</th>
+          <td mat-cell *matCellDef="let transaction"> {{transaction.Cantidad}} </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
+        <!-- Valor Column -->
+        <ng-container matColumnDef="Valor">
+          <th mat-header-cell *matHeaderCellDef> Valor</th>
+          <td mat-cell *matCellDef="let transaction"> {{transaction.Valor | currency}} </td>
+          <td mat-footer-cell *matFooterCellDef> {{getTotalValor() | currency}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+      </table>
+    </div>
+  </div>
+</div>
