--- a/src/app/pages/estadisticas/estadisticas.component.html
+++ b/src/app/pages/estadisticas/estadisticas.component.html
@@ -60,8 +60,8 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <div class="row mt-5">
+<div class="container  mt-5">
+  <div class="row">
     <div class="col-sm-2 col-md-2 col-lg-2" style="min-width: 50%;">
       <blockquote class="blockquote mb-0">
         <p class="text-dark">Productos vendidos en el dia.</p>
@@ -124,6 +124,34 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
       </table>
+    </div>
+  </div>
+</div>
+<div class="container mt-5 mb-5">
+  <div class="row">
+    <div class="col-sm-2 col-md-2 col-lg-2" style="min-width: 50%">
+      <mat-card class="shadow">
+        <mat-card-title>
+          <div class="text-dark">
+            Total de ventas en la semana.
+          </div>
+        </mat-card-title>
+        <mat-card-content>
+          <canvas #graficoVentasSemanaCanvas></canvas>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class="col-sm-2 col-md-2 col-lg-2" style="min-width: 50%">
+      <mat-card class="shadow">
+        <mat-card-title>
+          <div class="text-dark">
+            Total de ventas en el año.
+          </div>
+        </mat-card-title>
+        <mat-card-content>
+          <canvas #graficoVentasAnualCanvas></canvas>
+        </mat-card-content>
+      </mat-card>
     </div>
   </div>
 </div>
