--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -1,3 +1,101 @@
-<p>
-  inventario works!
-</p>
+<app-navbar [titulo]="'Inventario'"></app-navbar>
+<div class="container mt-5 mb-5">
+  <mat-card class="shadow">
+    <mat-card-title>
+      <div class="row">
+        <div class="col-sm-10 col-md-10 col-lg-10">
+          <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
+          </mat-form-field>
+        </div>
+        <div class="col-sm-2 col-md-2 col-lg-2">
+          <button mat-stroked-button>Agregar Producto</button>
+        </div>
+      </div>
+    </mat-card-title>
+    <mat-card-content>
+      <table class="table-striped" mat-table [dataSource]="dataSource" matSort>
+        <!-- Codigo Column -->
+        <ng-container matColumnDef="Codigo">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Codigo</th>
+          <td mat-cell *matCellDef="let element"> {{element.Codigo}} </td>
+        </ng-container>
+
+        <!-- Nombre Column -->
+        <ng-container matColumnDef="Nombre">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre</th>
+          <td mat-cell *matCellDef="let element"> {{element.Nombre}} </td>
+        </ng-container>
+
+        <!-- Presentacion Column -->
+        <ng-container matColumnDef="Presentacion">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Presentacion</th>
+          <td mat-cell *matCellDef="let element"> {{element.Presentacion}} </td>
+        </ng-container>
+
+        <!-- Laboratorio Column -->
+        <ng-container matColumnDef="Laboratorio">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Laboratorio</th>
+          <td mat-cell *matCellDef="let element"> {{element.Laboratorio}} </td>
+        </ng-container>
+
+        <!-- Sitio Column -->
+        <ng-container matColumnDef="Sitio">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Sitio</th>
+          <td mat-cell *matCellDef="let element"> {{element.Sitio}} </td>
+        </ng-container>
+
+        <!-- Existencia Column -->
+        <ng-container matColumnDef="Existencia">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Existencia</th>
+          <td mat-cell *matCellDef="let element"> {{element.Existencia}} </td>
+        </ng-container>
+
+        <!-- Precio Column -->
+        <ng-container matColumnDef="Precio">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Precio</th>
+          <td mat-cell *matCellDef="let element"> {{element.Precio}} </td>
+        </ng-container>
+
+        <!-- Vencimiento Column -->
+        <ng-container matColumnDef="Vencimiento">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Vencimiento</th>
+          <td mat-cell *matCellDef="let element"> {{element.Vencimiento}} </td>
+        </ng-container>
+
+        <!-- Acciones Column -->
+        <ng-container matColumnDef="Acciones">
+          <th mat-header-cell *matHeaderCellDef class="text-center"> Acciones</th>
+          <td mat-cell *matCellDef="let producto" class="text-center">
+            <div class="example-button-row">
+              <button mat-icon-button matTooltip="Agregar Existencia" class="text-success" (click)='null'>
+                <mat-icon>add_circle</mat-icon>
+              </button>
+              <button mat-icon-button color="warn" matTooltip="Eliminar Producto" (click)='null'>
+                <mat-icon>delete</mat-icon>
+              </button>
+              <button mat-icon-button matTooltip="Editar Producto" (click)='null'>
+                <mat-icon class="text-warning">edit</mat-icon>
+              </button>
+              <button mat-icon-button class="text-primary" matTooltip="Ver Producto" (click)='null'>
+                <mat-icon>remove_red_eye</mat-icon>
+              </button>
+              <button mat-icon-button class="text-secondary" matTooltip="Vender Producto" (click)='null'>
+                <mat-icon>add_shopping_cart</mat-icon>
+              </button>
+              <!--<button mat-icon-button matTooltip="Venta Rápida" (click)='openVerticallyCentered(ventaRapida, producto)'>
+                <mat-icon style="color: orange;">offline_bolt</mat-icon>
+              </button>-->
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+        </tr>
+      </table>
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    </mat-card-content>
+  </mat-card>
+</div>
