--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -3,7 +3,7 @@
   <mat-card class="shadow">
     <mat-card-title>
       <div class="row">
-        <div class="col-sm-10 col-md-10 col-lg-10">
+        <div class="col-sm-8 col-md-8 col-lg-8">
           <mat-form-field style="max-width: 15rem;">
             <input matInput type="text" (keyup)="applyFilter($event.target.value)" placeholder="Buscar"
                    [(ngModel)]="valorBusqueda">
@@ -17,8 +17,11 @@
             </button>
           </mat-form-field>
         </div>
-        <div class="col-sm-2 col-md-2 col-lg-2">
+        <div class="col-sm-2 col-md-2 col-lg-2 p-0">
           <button mat-stroked-button>Agregar Producto</button>
+        </div>
+        <div class="col-sm-2 col-md-2 col-lg-2 p-0">
+          <button mat-stroked-button color="primary">Exportar a Excel</button>
         </div>
       </div>
     </mat-card-title>
